# sirius

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeLists.txt  external_option.cmake  internal_option.cmake  option.cmake
include/: sirius_common.h  sirius_errno.h  sirius_log.h  sirius_macro.h  sirius_math.h  sirius_sys.h
include/internal/: sirius_internal_file.h  sirius_internal_log.h
src/: sirius_log.c  sirius_math.c
